--- a/application/modules/default/views/scripts/basicgrid/index.phtml
+++ b/application/modules/default/views/scripts/basicgrid/index.phtml
@@ -1,33 +1,27 @@
-<!DOCTYPE html>
-<!--
-Template Name: Arialogic
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
+<?php echo $this->doctype();?>
 <html>
 <head>
-<title>Arialogic | Pages | Basic Grid</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-<style type="text/css">
-/* DEMO ONLY */
-.container .demo{text-align:center;}
-.container .demo div{padding:8px 0;}
-.container .demo div:nth-child(odd){color:#FFFFFF; background:#CCCCCC;}
-.container .demo div:nth-child(even){color:#FFFFFF; background:#979797;}
-@media screen and (max-width:900px){.container .demo div{margin-bottom:0;}}
-/* DEMO ONLY */
-</style>
+	<title>Basic Grid</title>
+	<base href="public/templates/default/"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link href="css/layout.css" rel="stylesheet" type="text/css" media="all">
+	<style type="text/css">
+    /* DEMO ONLY */
+    .container .demo{text-align:center;}
+    .container .demo div{padding:8px 0;}
+    .container .demo div:nth-child(odd){color:#FFFFFF; background:#CCCCCC;}
+    .container .demo div:nth-child(even){color:#FFFFFF; background:#979797;}
+    @media screen and (max-width:900px){.container .demo div{margin-bottom:0;}}
+    /* DEMO ONLY */
+    </style>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('../images/demo/backgrounds/01.png');"> 
+<div class="bgded" style="background-image:url('images/backgrounds/01.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper overlay">
     <header id="header" class="hoc clear">
