Update login mock-up

--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -61,3 +61,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+<?php
+  echo $this->render("_helpers/login.phtml");
+  echo $this->render("_helpers/create_account.phtml");
+ ?>
