--- a/public/templates/default/css/custom.css
+++ b/public/templates/default/css/custom.css
@@ -4,3 +4,20 @@
   text-align: center;
   border-radius: 0;
 }
+
+iframe {
+  border: none;
+  width: 100%;
+}
+
+.login-ifame {
+  height: 220px;
+}
+
+.login-content-dialog {
+  width: 400px;
+}
+
+.create-account-ifame {
+  height: 290px;
+}
