--- a/public/templates/default/homepage_layout.phtml
+++ b/public/templates/default/homepage_layout.phtml
@@ -5,6 +5,7 @@
 	<base href="public/templates/default/"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="css/layout.css" rel="stylesheet" type="text/css" media="all">
 	<link href="css/custom.css" rel="stylesheet" type="text/css" media="all">
 </head>
@@ -23,7 +24,7 @@
           <li class="active"><a href="index.html">ホーム</a></li>
 					<li><a href="http://www.match.com/productlist">商品一覧</a></li>
           <li><a href="#">新アカウント</a></li>
-          <li><a href="#">ログイン</a></li>
+          <li><a onClick="login()">ログイン</a></li>
         </ul>
         <!-- ################################################################################################ -->
       </nav>
@@ -130,11 +131,8 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-<!-- IE9 Placeholder Support -->
-<script src="layout/scripts/jquery.placeholder.min.js"></script>
-<!-- / IE9 Placeholder Support -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/custom.js" charset="utf-8"></script>
 </body>
 </html>
