--- a/public/templates/default/sub_layout.phtml
+++ b/public/templates/default/sub_layout.phtml
@@ -20,7 +20,7 @@
       <nav id="mainav" class="clear">
         <!-- ################################################################################################ -->
         <ul class="clear">
-          <li class="active"><a href="index.html">ホーム</a></li>
+          <li class="active"><a href="http://www.match.com">ホーム</a></li>
 					<li><a href="http://www.match.com/productlist">商品一覧</a></li>
           <li><a href="#">新アカウント</a></li>
           <li><a href="#">ログイン</a></li>
@@ -129,11 +129,8 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-<!-- IE9 Placeholder Support -->
-<script src="layout/scripts/jquery.placeholder.min.js"></script>
-<!-- / IE9 Placeholder Support -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/custom.js" charset="utf-8"></script>
 </body>
 </html>
