--- a/public/templates/default/homepage_layout.phtml
+++ b/public/templates/default/homepage_layout.phtml
@@ -23,7 +23,6 @@
         <ul class="clear">
           <li class="active"><a href="index.html">ホーム</a></li>
 					<li><a href="http://www.match.com/productlist">商品一覧</a></li>
-          <li><a href="#">新アカウント</a></li>
           <li><a onClick="login()">ログイン</a></li>
         </ul>
         <!-- ################################################################################################ -->
@@ -62,6 +61,11 @@
 <!-- ################################################################################################ -->
 <!-- ################################################PHP############################################# -->
 <!-- ################################################################################################ -->
+
+<?php
+  echo $this->render("_helpers/login.phtml");
+  echo $this->render("_helpers/create_account.phtml");
+ ?>
 
 <div class="wrapper row4">
   <footer id="footer" class="hoc clear">
