--- a/application/modules/default/views/scripts/_helpers/create_account.phtml
+++ b/application/modules/default/views/scripts/_helpers/create_account.phtml
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">ログイン</h4>
+        <h4 class="modal-title">新アカウントを作る</h4>
       </div>
       <div class="modal-body">
         <iframe class="create-account-ifame" src="http://www.match.com/createaccount"></iframe>
