--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -6,32 +6,32 @@
     </div>
     <ul class="nospace elements">
       <li class="one_third first">
-        <article><a href="#"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Malesuada posuere</h6>
             <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
             <p>Ante pulvinar hendrerit ipsum ut scelerisque sapien purus sit amet&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
           </div>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Vivamus sit amet</h6>
             <time datetime="2045-04-05">5<sup>th</sup> April 2045</time>
             <p>Sagittis in aenean porta semper tortor vel blandit magna integer ac&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
           </div>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Pulvinar nisl non</h6>
             <time datetime="2045-04-04">4<sup>th</sup> April 2045</time>
             <p>Neque malesuada euismod proin sit amet nisl velit mauris orci nisl&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
+            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
           </div>
         </article>
       </li>
@@ -42,26 +42,3 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper coloured">
-  <div class="hoc clear">
-    <!-- ################################################################################################ -->
-    <figure id="logos">
-      <ul class="nospace group">
-        <li><a href="#"><img src="images/logo.png" alt=""></a></li>
-        <li><a href="#"><img src="images/logo.png" alt=""></a></li>
-        <li><a href="#"><img src="images/logo.png" alt=""></a></li>
-        <li><a href="#"><img src="images/logo.png" alt=""></a></li>
-        <li><a href="#"><img src="images/logo.png" alt=""></a></li>
-      </ul>
-      <figcaption class="hidden"><a class="btn small" href="#">More &raquo;</a></figcaption>
-    </figure>
-    <!-- ################################################################################################ -->
-  </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<?php
-  echo $this->render("_helpers/login.phtml");
-  echo $this->render("_helpers/create_account.phtml");
- ?>
