--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -6,7 +6,7 @@
     </div>
     <ul class="nospace elements">
       <li class="one_third first">
-        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Malesuada posuere</h6>
             <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -16,7 +16,7 @@
         </article>
       </li>
       <li class="one_third">
-        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Vivamus sit amet</h6>
             <time datetime="2045-04-05">5<sup>th</sup> April 2045</time>
@@ -26,7 +26,7 @@
         </article>
       </li>
       <li class="one_third">
-        <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
           <div class="txtwrap">
             <h6 class="heading">Pulvinar nisl non</h6>
             <time datetime="2045-04-04">4<sup>th</sup> April 2045</time>
