--- a/application/modules/default/views/scripts/productbrowser/index.phtml
+++ b/application/modules/default/views/scripts/productbrowser/index.phtml
@@ -26,7 +26,7 @@
     <div class="content three_quarter">
       <!-- ################################################################################################ -->
       <h1>商品の情報</h1>
-      <img class="imgl borderedbox inspace-5" src="images/imgl.gif" alt="">
+      <img class="imgl borderedbox inspace-5" src="<?php echo $this->imgUrl; ?>/imgl.gif" alt="">
       <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="http://www.os-templates.com/template-terms">website template licence</a>.</p>
       <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="http://www.os-templates.com/">free website templates</a> section.</p>
       <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
@@ -37,7 +37,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="images/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="<?php echo $this->imgUrl; ?>/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -51,7 +51,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="images/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="<?php echo $this->imgUrl; ?>/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -65,7 +65,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="images/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="<?php echo $this->imgUrl; ?>/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -77,7 +77,7 @@
             </article>
           </li>
         </ul>
-        
+
         <h2>Write A Comment</h2>
         <form action="#" method="post">
           <div class="one_third first">
