--- a/application/modules/default/views/scripts/search/index.phtml
+++ b/application/modules/default/views/scripts/search/index.phtml
@@ -13,7 +13,7 @@
           <header class="heading">Gallery Title Goes Here</header>
           <ul class="nospace clear">
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -23,7 +23,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -33,7 +33,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -43,7 +43,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -53,7 +53,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -63,7 +63,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -73,7 +73,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -83,7 +83,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -93,7 +93,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -103,7 +103,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -113,7 +113,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
@@ -123,7 +123,7 @@
               </article>
             </li>
             <li class="one_quarter">
-              <article><a href="http://www.match.com/productbrowser"><img src="images/320x220.png" alt=""></a>
+              <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
                 <div class="txtwrap">
                   <h6 class="heading">Malesuada posuere</h6>
                   <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
