--- a/public/templates/default/homepage_layout.phtml
+++ b/public/templates/default/homepage_layout.phtml
@@ -1,20 +1,18 @@
 <?php echo $this->doctype();?>
 <html>
 <head>
-	<title>Match</title>
-	<base href="public/templates/default/"/>
+	<?php echo $this->headTitle(); ?>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="css/layout.css" rel="stylesheet" type="text/css" media="all">
-	<link href="css/custom.css" rel="stylesheet" type="text/css" media="all">
+	<?php echo $this->headLink(); ?>
+	<?php echo $this->headScript(); ?>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('images/backgrounds/01.png');">
+<div class="bgded" style="background-image:url('<?php echo $this->imgUrl; ?>/backgrounds/01.png');">
   <!-- ################################################################################################ -->
   <div class="wrapper overlay">
     <header id="header" class="hoc clear">
@@ -67,76 +65,4 @@
   echo $this->render("_helpers/create_account.phtml");
  ?>
 
-<div class="wrapper row4">
-  <footer id="footer" class="hoc clear">
-    <!-- ################################################################################################ -->
-    <div class="one_quarter first">
-      <h6 class="title">連絡アドレス</h6>
-      <ul class="nospace linklist contact">
-        <li><i class="fa fa-map-marker"></i>
-          <address>
-          東京都渋谷区千駄ヶ谷1-29-9
-          </address>
-        </li>
-        <li><i class="fa fa-phone"></i> 050-5538-1847</li>
-        <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@elife.co.jp</li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title"></h6>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title">Suscipit magna sed</h6>
-      <p class="btmspace-30">Varius libero molestie habitasse sed platea dictumst proin.</p>
-      <form method="post" action="#">
-        <fieldset>
-          <legend>Newsletter:</legend>
-          <input class="btmspace-15" type="text" value="" placeholder="Name">
-          <input class="btmspace-15" type="text" value="" placeholder="Email">
-          <button type="submit" value="submit">Submit</button>
-        </fieldset>
-      </form>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title">Sed elit nullam</h6>
-      <ul class="nospace linklist">
-        <li>
-          <article>
-            <h2 class="nospace font-x1"><a href="#">Scelerisque lacus </a></h2>
-            <time class="font-xs block btmspace-10" datetime="2045-04-06">Friday, 6<sup>th</sup> April 2045</time>
-            <p class="nospace">A metus luctus quis hendrerit sed vel elit ac mauris facilisis&hellip;</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h2 class="nospace font-x1"><a href="#">Vehicula tortor</a></h2>
-            <time class="font-xs block btmspace-10" datetime="2045-04-05">Thirsday, 5<sup>th</sup> April 2045</time>
-            <p class="nospace">Ornare elit sed quam ultricies non rhoncus mauris ornare&hellip;</p>
-          </article>
-        </li>
-      </ul>
-    </div>
-    <!-- ################################################################################################ -->
-  </footer>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear">
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="http://www.elife.co.jp/">elife.co.jp</a></p>
-    <!-- ################################################################################################ -->
-  </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="js/custom.js" charset="utf-8"></script>
-</body>
-</html>
+<?php echo $this->render("helpers/footer.phtml"); ?>
