--- a/application/modules/default/views/scripts/productbrowser/index.phtml
+++ b/application/modules/default/views/scripts/productbrowser/index.phtml
@@ -1,29 +1,7 @@
 <div class="wrapper row3">
   <main class="hoc container clear">
     <!-- main body -->
-    <!-- ################################################################################################ -->
-    <div class="sidebar one_quarter first">
-      <!-- ################################################################################################ -->
-      <h6>カテゴリー</h6>
-      <nav class="sdb_holder">
-        <ul>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a></li>
-        </ul>
-      </nav>
-      <!-- ################################################################################################ -->
-    </div>
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <div class="content three_quarter">
+    <div class="content">
       <!-- ################################################################################################ -->
       <h1>商品の情報</h1>
       <img class="imgl borderedbox inspace-5" src="<?php echo $this->imgUrl; ?>/imgl.gif" alt="">
