update new design for controller and action

--- a/application/modules/default/views/scripts/auth/login.phtml
+++ b/application/modules/default/views/scripts/auth/login.phtml
@@ -13,5 +13,5 @@
     </label>
   </div>
   <?php echo $this->formSubmit('submit', 'ログイン', array('class'=>'btn btn-default')); ?>
-  <span class="label label-danger"><?php echo $this->notation; ?></span>
+  <span class="label label-danger" style="font-size: 15px;"><?php echo $this->error; ?></span>
 </form>
