--- a/application/modules/default/views/scripts/product/list.phtml
+++ b/application/modules/default/views/scripts/product/list.phtml
@@ -25,11 +25,11 @@
               for ($i = 0; $i<12; $i++) :
             ?>
             <li class="one_third">
-              <article class="product-case"><a href="<?php echo $this->baseUrl("productbrowser/index/id/" . $this->productData[$i]['id']); ?>">
+              <article class="product-case"><a href="<?php echo $this->baseUrl("product/detail/id/" . $this->productData[$i]['id']); ?>">
                 <img src="<?php echo $this->productData[$i][img]; ?>"></a>
                 <div class="txtwrap">
                   <h6 class="heading product-name"><?php echo $this->productData[$i]["name"]; ?></h6>
-                  <footer><a href="<?php echo $this->baseUrl("productbrowser/index/id/" . $this->productData[$i]['id']); ?>">Read More &raquo;</a></footer>
+                  <footer><a href="<?php echo $this->baseUrl("product/detail/id/" . $this->productData[$i]['id']); ?>">Read More &raquo;</a></footer>
                 </div>
               </article>
             </li>
