--- a/public/templates/default/sub_layout.phtml
+++ b/public/templates/default/sub_layout.phtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<?php echo $this->headTitle(); ?>
-	<base href="public/templates/default/"/>
+	<base href="<?php echo $this->baseUrl('/public/templates/default/'); ?>"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<?php echo $this->headLink(); ?>
