--- a/public/templates/default/blank_layout.phtml
+++ b/public/templates/default/blank_layout.phtml
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href="public/templates/default/"/>
+    <base href="<?php echo APPLICATION_PATH . '/public/templates/default' ?>"/>
     <?php echo $this->headTitle(); ?>
     <?php echo $this->headLink(); ?>
     <?php echo $this->headScript(); ?>
