--- a/public/templates/default/helpers/create_account.phtml
+++ b/public/templates/default/helpers/create_account.phtml
@@ -6,10 +6,10 @@
         <h4 class="modal-title">新アカウントを作る</h4>
       </div>
       <div class="modal-body">
-        <iframe class="create-account-ifame" src="<?php echo $this->baseUrl('/user/create-account') ?>"></iframe>
+        <iframe class="create-account-ifame" src="<?php echo $this->baseUrl('/user/create-account');?>"></iframe>
       </div>
       <div class="modal-footer">
-        <a onclick="login()">ログイン</a>
+        <a onclick="login()">ログインに戻る</a>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
