--- a/public/templates/default/helpers/footer.phtml
+++ b/public/templates/default/helpers/footer.phtml
@@ -66,5 +66,6 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
+<?php echo $this->headScript(); ?>
 </body>
 </html>
