--- a/public/templates/default/sub_layout.phtml
+++ b/public/templates/default/sub_layout.phtml
@@ -2,18 +2,17 @@
 <html>
 <head>
 	<?php echo $this->headTitle(); ?>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<base href="<?php echo $this->baseUrl('/public/templates/default/'); ?>"/>
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<?php echo $this->headLink(); ?>
-	<?php echo $this->headScript(); ?>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('<?php echo $this->imgUrl; ?>/backgrounds/01.png');">
+<div class="bgded" style="background-image:url('<?php echo $this->imgUrl; ?>/backgrounds/01.jpg');">
   <!-- ################################################################################################ -->
   <?php echo $this->render("helpers/menu.phtml") ?>
   <!-- ################################################################################################ -->
