--- a/public/templates/default/blank_layout.phtml
+++ b/public/templates/default/blank_layout.phtml
@@ -1,13 +1,13 @@
 <?php echo $this->doctype(); ?>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <base href="<?php echo APPLICATION_PATH . '/public/templates/default' ?>"/>
     <?php echo $this->headTitle(); ?>
     <?php echo $this->headLink(); ?>
-    <?php echo $this->headScript(); ?>
   </head>
   <body>
     <?php echo $this->layout()->content; ?>
+    <?php echo $this->headScript(); ?>
   </body>
 </html>
